style.css
/* The Rusty Nail - Styles  */
:root {
    --black: #0a0a0a;
    --charcoal: #141414;
    --iron: #1e1e1e;
    --rust: #b94a1a;
    --rust-light: #e05c22;
    --yellow: #d4a017;
    --cream: #e8e0d0;
    --grey-mid: #888880;
    --grey-light: #c8c0b0;

    --display-font: 'Bebas Neue';
    --body-font: 'Barlow Condensed';
}

*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: var(--black);
    color: var(--cream);
    font-family: var(--body-font);
}

body::before {
    display: block;
    content: "";
    position: fixed;
    inset: 0;
    pointer-events: none;
    z-index: 1;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.75' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='200' height='200' filter='url(%23n)' opacity='0.16'/%3E%3C/svg%3E");
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
    background-color: var(--charcoal);
}

nav ul {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.3s ease;
}

nav ul.open {
    max-height: 400px;
}

nav li {
    list-style: none;
}

nav li a {
    padding: 5px;
    color: var(--rust-light)
}

.hero {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: linear-gradient(var(--iron), var(--charcoal));
}

.hero>h1 {
    font-family: var(--display-font);
    font-size: 4rem;
}

.featured-grid {
    display: grid;
}

.about-strip {
    padding: 2rem;
}

.about-image {
    background: var(--charcoal);
    min-height: 300px;
    aspect-ratio: 1;
}

.about-text > h2{
    font-family: var(--display-font);
    font-size: 3rem;
}

.fade-up {
    opacity: 0;
    transform: translateY(40px);
    transition: opacity 1s ease, transform 1s ease;    
}

.visible {
    opacity: 1;
    transform: translateY(0);
}

#hamburger {
    display: flex;
    flex-direction: column;
    background: none;
    border: none;
    cursor: pointer;
    gap: 1rem;
}

#hamburger span {
    width: 25px;
    height: 2px;
    background-color: var(--cream);
}

@media (min-width: 560px) {
    .featured-grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (min-width: 768px) {
    #hamburger {
        display: none;
    }

    nav ul {
        max-height: none;
        overflow: visible;
        display: flex;
        gap: 1rem;
    }
}

@media (min-width: 900px) {
    .featured-grid {
        grid-template-columns: repeat(3, 1fr);
    }

    .about-strip{
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 2rem;
    }
}

